--- a/EmailCheck/EmailCheck.csproj
+++ b/EmailCheck/EmailCheck.csproj
@@ -106,6 +106,12 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="HelperClasses\SendEmail.cs" />
     <Compile Include="HelperClasses\Entities\User.cs" />
+    <Compile Include="WindowsFormsLangs\Success.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="WindowsFormsLangs\Success.Designer.cs">
+      <DependentUpon>Success.cs</DependentUpon>
+    </Compile>
     <Compile Include="WindowsFormsLangs\Warning.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -139,6 +145,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="WindowsFormsLangs\Success.resx">
+      <DependentUpon>Success.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="WindowsFormsLangs\Warning.resx">
       <DependentUpon>Warning.cs</DependentUpon>
     </EmbeddedResource>
